# biznisweb-mcp-server

./: .env.example  .gitignore  HOTFIX_CHANGES.md  HOTFIX_COMPLETE_GUIDE.md  README.md  mcp-config-examples.md  pyproject.toml  test_server.py
biznisweb_mcp/: __init__.py  __main__.py  server.py
